Bug 299842 - BiDi: Recursive caret movement in LTR lines which begin with an RTL word or character. patch from Uri Bernstein <uriber@gmail.com>, r+sr=roc, a=asa.